<resources>
    <string name="app_name">Спортивный лес</string>
    <string name="app_name_title">Спортивный лес</string>
    <string name="app_version">0.3.16</string>
    <string name="app_version_revision">0</string>
    <string name="app_internet_api_url">http://sportintheforest.siteme.org/api.php</string>
    <string name="app_internet_api_url_test">http://192.168.1.5/api.php</string>
    <string name="main_level_str">11 ур</string>
    <string name="log_tag">myLogs</string>
    <string name="delete_record">Удалить группу навыков</string>
    <string name="skills_title">Навыки</string>
    <string name="locations_title">Места тренировок</string>
    <string name="location_title">Название места</string>
    <string name="npcs_list_info_msg">Здесь пока ещё нет персонажей</string>
    <string name="prompt_add_location_title">Название группы</string>
    <string name="prompt_add_user_title">Имя пользователя</string>
    <string name="prompt_add_exercise_title">Название упражнения</string>
    <string name="prompt_add_user_exercise_title">Выберите упражнение</string>
    <string name="prompt_add_skill_type">Способ подсчёта</string>
    <string name="prompt_add_skill_ratio">Множитель\nопыта</string>
    <string name="prompt_add_skill_day_limit">Дневное\nограничение</string>
    <string name="prompt_select_specialisation_title">Выберите специализацию</string>
    <string name="prompt_select_specialisation_button_result">Результат</string>
    <string name="prompt_select_specialisation_button_resistance">Сопротивление</string>
    <string name="prompt_select_specialisation_button_regeneration">Восстановление</string>
    <string name="prompt_select_stat_type_title">2018</string>
    <string name="prompt_select_stat_type_months">По месяцам</string>
    <string name="prompt_select_stat_type_weeks">По неделям</string>
    <string name="shared_preferences">SportInTheForest</string>
    <string name="preference_name_user_name">user_name</string>
    <string name="preference_name_user_fitness_points">user_fitness_points</string>
    <string name="preference_name_user_resistance">user_fitness_points</string>
    <string name="preference_name_user_multiplier">user_fitness_points</string>
    <string name="preference_name_user_bonus_chance">user_fitness_points</string>
    <string name="preference_name_user_bonus_multiplier">user_fitness_points</string>
    <string name="preference_name_user_encoded_level">user_encoded_level</string>
    <string name="preference_name_user_id">user_id</string>
    <string name="preference_name_exercise_id">exercise_id</string>
    <string name="preference_name_last_selection">last_selection</string>
    <string name="preference_name_current_tab_id">current_tab_id</string>
    <string name="preference_name_user_fp">user_fp</string>
    <string name="preference_name_user_exp">user_exp</string>
    <string name="prompt_add_training_date">Дата тренировки:</string>
    <string name="prompt_add_training_count">Результат</string>
    <string name="prompt_add_training_pre_action">Усиление</string>
    <string name="prompt_add_training_action">Действие</string>
    <string name="prompt_add_training_target">Цель</string>
    <string name="prompt_exercise_difficulty">Сложность</string>
    <string name="msg_location_not_found">Место не найдено</string>
    <string name="msg_user_need_name">У пользователя должно быть имя</string>
    <string name="msg_user_name_already_exists">Пользователь с таким именем уже существует</string>
    <string name="msg_user_add_error">Не удалось создать пользователя</string>
    <string name="msg_user_add_success">Пользователь успешно создан</string>
    <string name="msg_user_edit_success">Пользователь успешно изменён</string>
    <string name="msg_user_edit_error">Не удалось изменить пользователя</string>
    <string name="msg_training_add_success">Тренировка успешно сохранена. К опыту </string>
    <string name="msg_training_add_error">Не удалось сохранить тренировку</string>
    <string name="btn_cancel_text">Отмена</string>
    <string name="btn_save_text">Сохранить</string>
    <string name="btn_ok_text">Хорошо</string>
    <string name="spinner_end_of_list">В конец списка</string>

    <string name="prompt_select_action_title">Выберите действие</string>
    <string name="prompt_select_action_edit">Редактировать</string>
    <string name="prompt_select_action_delete">Удалить</string>

    <string name="msg_group_add_error">Не удалось создать группу</string>
    <string name="msg_group_add_success">Группа успешно создана</string>
    <string name="msg_group_edit_success">Группа успешно изменена</string>
    <string name="msg_group_actions">Возможные действия</string>
    <string name="msg_group_name_already_exists">Группа с таким названием уже существует</string>
    <string name="msg_group_need_name">У группы должно быть название</string>
    <string name="txt_exp">Опыт</string>
    <string name="txt_progress">Прогресс</string>
    <string name="txt_npc_info_max_res">Результат</string>
    <string name="txt_npc_info_multiplier">Множитель</string>
    <string name="txt_npc_info_exp">Опыт</string>
    <string name="txt_npc_info_count">Фитнес очки</string>
    <string name="txt_main_user_parameters">Параметры</string>
    <string name="txt_main_user_stat">Статистика</string>
    <string name="txt_main_user_specialisation">Специализация:</string>
    <string name="txt_main_user_level">Уровень:</string>
    <string name="txt_main_user_fitness_points">Фитнес очки:</string>
    <string name="txt_main_user_skill_points">Очки навыков:</string>
    <string name="txt_main_user_result_today">Текущий результат:</string>
    <string name="txt_main_user_max_day_result">Лучший результат за сутки:</string>
    <string name="txt_main_user_avg_result">Средний результат:</string>
    <string name="txt_main_user_avg_today_result">Средний результат за сегодня:</string>
    <string name="txt_main_user_max_competition_result">Рекорд соревнования:</string>
    <string name="txt_main_user_all_time_sum_result">За всё время:</string>
    <string name="txt_main_user_competitions">Соревнования</string>
    <string name="txt_main_user_competition_wins">Победы:</string>
    <string name="txt_main_user_competition_defeats">Поражения:</string>
    <string name="txt_main_user_competition_draws">Ничьи:</string>
    <string name="txt_main_user_competition_select_specialisation">Выбрать специализацию</string>
    <string name="txt_main_user_stat_current_week">Текущая неделя</string>
    <string name="txt_main_user_stat_current_week_result">Результат за неделю</string>
    <string name="txt_main_user_stat_current_month_result">Результат за месяц</string>
    <string name="txt_main_user_stat_current_year_result">Результат за год</string>
    <string name="txt_main_user_achievements">Выполнено достижений:</string>
    <string name="txt_main_user_quests">Задания:</string>
    <string name="txt_main_user_skills">Навыки:</string>
    <string name="txt_main_user_competition_specialisation">Специализация:</string>

    <string name="fragment_page_stat_training_days">Дни тренировок:</string>
    <string name="fragment_page_stat_total_count">Общий результат:</string>
    <string name="fragment_page_stat_max_competition_result">Рекорд соревнования:</string>
    <string name="fragment_page_stat_max_result">Рекорд подхода:</string>
    <string name="fragment_page_stat_total_number_of_moves">Количество подходов:</string>
    <string name="fragment_page_stat_average_result">Средний результат:</string>

    <string name="fragment_page_trainings_start">Начать борьбу с ленью</string>

    <string name="fragment_page_skills_learn_skills">Обучение</string>

    <string name="msg_new_specialisation">Специализация получена: %s!</string>
    <string name="prompt_character_info_active_skills_title">Усиления</string>

    <string name="txt_competition_user_fitness_points">Фитнес очки:</string>
    <string name="txt_main_user_resistance">Сопротивление:</string>
    <string name="txt_main_user_multiplier">Множитель ФО:</string>
    <string name="txt_main_user_bonus_chance">Вероятность бонуса:</string>
    <string name="txt_main_user_bonus_multiplier">Множитель бонуса:</string>
    <string name="txt_main_user_action_points">Очки действий:</string>
    <string name="txt_main_user_max_action_points">Макс. очков действий:</string>
    <string name="txt_main_user_exp">Очки опыта:</string>
    <string name="txt_main_user_percents">Прогресс:</string>
    <string name="txt_main_non_player_max_result">Результат:</string>
    <string name="txt_main_exercise_difficulty">Сложность упражнения:</string>
    <string name="skill_remove_success">Навык был успешно удалён</string>
    <string name="skill_remove_error">Не могу удалить навык</string>
    <string name="group_remove_success">Группа была успешно удалена</string>
    <string name="group_remove_error">Не могу удалить группу</string>
    <string name="msg_NPCs_count_limit_reached">Достигнуто максимальное количество навыков для текущего уровня</string>
    <string name="msg_groups_count_limit_reached">Достигнуто максимальное количество групп для текущего уровня</string>
    <string name="group_remove_error_need_empty_group">Можно удалить только группу без навыков</string>
    <string name="msg_level_up_congratulations">Поздравляем! Вы достигли %d уровня</string>
    <string name="msg_level_up_congratulations_specialisation">Поздравляем! Вы достигли %d уровня и теперь можете выбрать специализацию!</string>
    <string name="msg_new_skill_congratulations">Поздравляем! Вы изучили %s</string>
    <string name="msg_new_skill_need_more_skill_points">Нужно больше очков навыков</string>
    <string name="msg_new_skill_need_higher_level">Вы ещё не достигли нужного уровня</string>
    <string name="select_user_title">Выберите пользователя</string>
    <string name="exercises_title">Упражнения</string>
    <string name="users_list_info_msg">В списке пока нет пользователей</string>

    <string name="main_menu_start">Старт</string>
    <string name="main_menu_settings">Настройки</string>
    <string name="main_menu_knowledge">База знаний</string>

    <string name="extra_settings_menu_replay_editor">Редактор роликов</string>

    <string name="btn_txt_locations_list">В лес</string>
    <string name="btn_txt_skills">Навыки</string>
    <string name="prompt_invite_user_input_msg">Пригласите пользователя</string>
    <string name="prompt_learn_skills_msg">Обучение</string>
    <string name="exercises_list_info_msg">Список упражнения пока пуст</string>
    <string name="msg_exercise_need_name">Укажите  название упражнения</string>
    <string name="msg_exercise_name_already_exists">Упражнение с таким названием уже существует</string>
    <string name="msg_exercise_add_success">Новый вид упражнений успешно добавлен</string>
    <string name="msg_exercise_add_error">Не удалось добавить новый вид упражнений</string>
    <string name="msg_exercise_edit_success">Изменения приняты</string>
    <string name="msg_exercise_edit_error">Не удалось применить изменения</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="prompt_delete_user">Удалить пользователя %s?</string>
    <string name="prompt_delete_user_success">Пользователь %s был успешно удалён</string>
    <string name="prompt_delete_user_error">Не удалось удалить пользователя %s: что-то пошло не так</string>
    <string name="prompt_yes">Да</string>
    <string name="prompt_no">Нет</string>
    <string name="are_you_sure_learn_skill">Изучить навык %s уровня %s?</string>
    <string name="myStatShadowActivityExerciseName">Упражнение</string>
    <string name="statMyShadowActivityPosition">Вы занимаете 1-е место из 3</string>

    <string name="prompt_add_day_info_title">Обновление информации</string>
</resources>
