<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/app_name_title"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="ver. 0.0.0"
        android:textAlignment="center"
        android:layout_marginBottom="30sp"
        />

    <Button
        android:id="@+id/btMenuStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="210sp"
        android:height="70sp"
        android:text="@string/main_menu_start" />

    <Button
        android:id="@+id/btMenuSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="210sp"
        android:height="70sp"
        android:text="@string/main_menu_settings" />

    <Button
        android:id="@+id/btMenuKnowledge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="210sp"
        android:height="70sp"
        android:text="@string/main_menu_knowledge" />
</LinearLayout>