<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/txt_main_user_competition_specialisation"
                    android:textAlignment="center"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/txt_main_user_competition_wins"
                    android:textAlignment="center"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/txt_main_user_competition_draws"
                    android:textAlignment="center"
                    android:textSize="17sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/txt_main_user_competition_defeats"
                    android:textAlignment="center"
                    android:textSize="17sp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/txt_main_user_competitions"
                    android:textAlignment="center"
                    android:textSize="17sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginStart="10sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserSpecialisation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="10dp"
                    android:text="Нет"
                    android:textAlignment="center"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tvUserCompetitionWins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="10dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tvUserCompetitionDraws"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="10dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tvUserCompetitionDefeats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="10dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/tvUserCompetitions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginStart="10dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btSelectSpecialisation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_main_user_competition_select_specialisation" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>